--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": "10"
   },
   "dependencies": {
-    "flatpickr": "^4.6.2"
+    "flatpickr": "^4.6.2",
+    "moment": "^2.24.0"
   }
 }
