--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "test": "npm run eslint"
   },
   "devDependencies": {
-    "css-loader": "^3.2.0",
-    "error-overlay-webpack-plugin": "^0.4.0",
+    "css-loader": "3.2.0",
+    "error-overlay-webpack-plugin": "0.4.0",
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
-    "style-loader": "^1.0.0",
+    "style-loader": "1.0.0",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6",
     "webpack-dev-server": "3.8.0"
@@ -23,9 +23,9 @@
     "node": "10"
   },
   "dependencies": {
-    "chart.js": "^2.8.0",
-    "chartjs-plugin-datalabels": "^0.7.0",
-    "flatpickr": "^4.6.2",
-    "moment": "^2.24.0"
+    "chart.js": "2.8.0",
+    "chartjs-plugin-datalabels": "0.7.0",
+    "flatpickr": "4.6.2",
+    "moment": "2.24.0"
   }
 }
